--- a/eatsafeny/src/App.css
+++ b/eatsafeny/src/App.css
@@ -38,12 +38,15 @@ a {
 
 .topBar {
   color: #8ECAE6;
-  background-color: #023047;
+  background-color: #01567a;
+  justify-content: space-between;
+  margin: none;
 }
 
 .logo {
   color: #8ECAE6;
-  background-color: #023047;
+  background-color: #01567a;
+  margin: none;
 }
 
 .home {
@@ -53,6 +56,15 @@ a {
 
 .sideBar {
   color: #8ECAE6;
+  background-color: #023047;
+}
+
+.result {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 55%;
+  margin: auto;
   background-color: #023047;
 }
 
