--- a/eatsafeny/src/App.css
+++ b/eatsafeny/src/App.css
@@ -6,36 +6,28 @@ a {
   width: 600px;
   height: 600px;
   display: flex;
- align-items: center;
- justify-content: center;
-margin: auto;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
 }
 
-.slide1 {
-  display: flex;
-flex-direction: column;
-justify-content: center;
-
-}
-.text {
-  opacity: 0%;
-}
-.text:hover {
-  opacity: 100%;
-background-color:rgb(34, 139, 196);
-}
-
-.carousel img:hover {
+.slide1:hover .review-img {
   filter: blur(5px);
   -webkit-filter: blur(8px);
+}
+.slide1 div {
+  opacity: 0%;
+}
+.slide1:hover div {
+  opacity: 100%;
+  background-color: rgb(34, 139, 196);
 }
 
 .App {
   text-align: center;
-  color: #8ECAE6;
+  color: #8ecae6;
   background-color: #023047;
 }
-
 
 .App-logo {
   height: 40vmin;
@@ -64,25 +56,25 @@ background-color:rgb(34, 139, 196);
 }
 
 .topBar {
-  color: #8ECAE6;
+  color: #8ecae6;
   background-color: #01567a;
   justify-content: space-between;
   margin: none;
 }
 
 .logo {
-  color: #8ECAE6;
+  color: #8ecae6;
   background-color: #01567a;
   margin: none;
 }
 
 .home {
-  color: #8ECAE6;
+  color: #8ecae6;
   background-color: #023047;
 }
 
 .sideBar {
-  color: #8ECAE6;
+  color: #8ecae6;
   background-color: #023047;
 }
 
