--- a/eatsafeny/src/App.css
+++ b/eatsafeny/src/App.css
@@ -1,7 +1,13 @@
+html{
+  background-color: #023047;
+  height: 100vh;
+}
+
 a {
   text-decoration: none;
   color: inherit;
 }
+
 .carousel {
   width: 600px;
   height: 600px;
