--- a/eatsafeny/src/App.css
+++ b/eatsafeny/src/App.css
@@ -25,7 +25,7 @@ a {
   opacity: 0%;
 }
 .slide1:hover div {
-  opacity: 100%;
+  opacity: 80%;
   background-color: rgb(34, 139, 196);
 }
 
@@ -74,6 +74,7 @@ a {
   justify-content: space-between;
   margin: auto;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 #required{
@@ -131,4 +132,26 @@ height: 30px;
 #search-h2{
   padding-top: 10px;
   padding-bottom: 10px;
+}
+
+.slogans{
+ color: rgb(249, 188, 75);
+}
+#review-section{
+  padding-top: 20px;
+  opacity: 80%;
+  background-color: #01567a;
+}
+
+#review-form{
+  height: 100px;
+  width: 90%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#disclaimer{
+  color: rgb(249, 188, 75);
 }
